--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bitcoin-core": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.44",
