--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bitcoin-core": "^4.2.0",
+    "bitcoinjs-lib": "^6.1.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.44",
