--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.0.4",
     "node": "^21.2.0",
+    "qrcode": "^1.5.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
